--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 <header id="title-block-header">
 <h1 class="title">Blog</h1>
 </header>
-<p><a href="index.html">Main</a> <a href="blog.html">Blog</a></p>
+<p><a href="index.html">Home</a> <a href="blog.html">Blog</a></p>
 <p><a href="cat_blog.html">cat_blog</a></p>
 <p><a href="dog_blog.html">dog_blog</a></p>
 </body>
