--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header id="title-block-header">
 <h1 class="title">Home</h1>
 </header>
-<p><a href="index.html">Main</a> <a href="blog.html">Blog</a></p>
+<p><a href="index.html">Home</a> <a href="blog.html">Blog</a></p>
 <h1 id="about-me">About Me</h1>
 <p>Name: Cora Scott</p>
 <p>Home State: Michigan</p>
