--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <p><a href="index.html">Home</a> <a href="blog.html">Blog</a></p>
 <h1 id="about-me">About Me</h1>
 <p>Name: Cora Scott</p>
+<p>Favorite Food: Hawaiian Pizza yum!</p>
 <p>Home State: Michigan</p>
 <p>Major: Computer Science</p>
 <h2 id="welcome-to-my-website-for-eecs-201">Welcome to my website for EECS 201!</h2>
