ran publish all

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 id="about-me">About Me</h1>
 <p>Name: Cora Scott</p>
 <p>Favorite Food: Hawaiian Pizza yum!</p>
-<p>Favorite Color: Mint Green</p>
+<p>Favorite Color: Lime</p>
 <p>Home State: Michigan</p>
 <p>Major: Computer Science</p>
 <h2 id="welcome-to-my-website-for-eecs-201">Welcome to my website for EECS 201!</h2>
